--- a/src/components/TaskFott/TaskFott.css
+++ b/src/components/TaskFott/TaskFott.css
@@ -6,9 +6,14 @@
   padding: 10px 0px;
   bottom: 0;
   left: 0;
-  font-size: 12px;
   background-color: var(--color-principal);
-  color: var(--color-terciario);
   z-index: 50;
-  font-family: 'Courier New', Courier, monospace;
+
+}
+
+.fott a {
+  text-decoration: none;
+  color: var(--color-terciario);
+  font-size: 13px;
+  font-weight: bold;
 }
